--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    <title>Fernando's About Page</title>
+    <title>About Fernando</title>
   </head>
   <body>
     <header class="page-header">
