--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,7 +42,7 @@
         Email: <a href="mailto:flareniel@gmail.com">flareniel(at)gmail(dot)com</a><br><br>
         <a href="mailto:flareniel@gmail.com">Contact Me</a><br>
         <p>Leave me a message by filling out the form below! Fields marked with a * are required.</p>
-        <form action="" method="post" id="contact-form">
+        <form action="#" method="post" id="contact-form">
           <label class="standard-label" for="first-name">First Name:</label><br>
           <input type="text" id="first-name" name="user-first-name"><br>
 
