add Meet Project

--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
         <p class="profile__text">Welcome to my Website! I am a Web Developer Student from Georgia!</p>
 
         <!--Link to projects-->
-        <a href="#">Check out some of my code!</a><br><br>
-
-        <a href="#">Buttons!</a>
-        <button type="button">Default Button</button>
-        <button class="button__secondary">Secondary Button</button>
+        <a href="work.html">Check out some of my code!</a><br><br>
       </div>
     </main>
     <footer class="page-footer">
