--- a/work.html
+++ b/work.html
@@ -35,9 +35,13 @@
         <div class="grid">
             <!-- Grid items will live here -->
             <div class="grid__item">
-                <h2>Example Project</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
+                <h2>Meet App</h2>
+                <img src="img/photo.jpg" class="project-photo" alt="Meet App Screenshot">
+                <p>
+                  This is Meet, a calendar based app designed to organize dates and details of events occurring by city! 
+                  This uses the google calendar API and data created by Career Foundry.
+                </p>
+                <a href="https://ffernandez524.github.io/meet/">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>Example Project</h2>
