--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
             <!-- Grid items will live here -->
             <div class="grid__item">
                 <h2>Meet App</h2>
-                <img src="img/photo.jpg" class="project-photo" alt="Meet App Screenshot">
+                <img src="img/meetPic.JPG" class="project-photo" alt="Meet App Screenshot">
                 <p>
                   This is Meet, a calendar based app designed to organize dates and details of events occurring by city! 
                   This uses the google calendar API and data created by Career Foundry.
