Pokedex on work page

--- a/work.html
+++ b/work.html
@@ -44,9 +44,11 @@
                 <a href="https://ffernandez524.github.io/meet/">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Example Project</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
+                <h2>Pokedex App</h2>
+                <span>This app uses the pokemon API hosted at: </span>
+                <a href="https://pokeapi.co/">https://pokeapi.co/</a>
+                <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
+                <a href="https://ffernandez524.github.io/pokedex-app/">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>Example Project</h2>
