--- a/work.html
+++ b/work.html
@@ -45,10 +45,13 @@
             </div>
             <div class="grid__item">
                 <h2>Pokedex App</h2>
+                <img src="img/pokedexPic.JPG" class="project-img" alt="Meet App Screenshot">
                 <span>This app uses the pokemon API hosted at: </span>
                 <a href="https://pokeapi.co/">https://pokeapi.co/</a>
                 <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
-                <a href="https://ffernandez524.github.io/pokedex-app/">See project on GitHub</a>
+                <a href="https://github.com/ffernandez524/pokedex-app">See project on GitHub</a>
+                <a href="https://ffernandez524.github.io/pokedex-app/">Check out a live version!</a>
+                
             </div>
             <div class="grid__item">
                 <h2>Example Project</h2>
@@ -56,9 +59,9 @@
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="grid__item">
-                <h2>Example Project</h2>
+                <h2>Chat App</h2>
                 <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/ffernandez524/chat-app">See project on GitHub</a>
             </div>
             <div class="grid__item">
                 <h2>Example Project</h2>
