--- a/work.html
+++ b/work.html
@@ -31,49 +31,51 @@
       </nav>
     </header>
     <section>
-        <h1>Work</h1>
-        <div class="grid">
-            <!-- Grid items will live here -->
-            <div class="grid__item">
-                <h2>Meet App</h2>
-                <img src="img/meetPic.JPG" class="project-img" alt="Meet App Screenshot">
-                <p>
-                  This is Meet, a calendar based app designed to organize dates and details of events occurring by city! 
-                  This uses the google calendar API and data created by Career Foundry.
-                </p>
-                <a href="https://ffernandez524.github.io/meet/">See project on GitHub</a>
-            </div>
-            <div class="grid__item">
-                <h2>Pokedex App</h2>
-                <img src="img/pokedexPic.JPG" class="project-img" alt="Meet App Screenshot">
-                <span>This app uses the pokemon API hosted at: </span>
-                <a href="https://pokeapi.co/">https://pokeapi.co/</a>
-                <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
-                <a href="https://github.com/ffernandez524/pokedex-app">See project on GitHub</a>
-                <a href="https://ffernandez524.github.io/pokedex-app/">Check out a live version!</a>
-                
-            </div>
-            <div class="grid__item">
-                <h2>Example Project</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
-            </div>
-            <div class="grid__item">
-                <h2>Chat App</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="https://github.com/ffernandez524/chat-app">See project on GitHub</a>
-            </div>
-            <div class="grid__item">
-                <h2>Example Project</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
-            </div>
-            <div class="grid__item">
-                <h2>Example Project</h2>
-                <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
-                <a href="#">See project on GitHub</a>
-            </div>
+      <h1>Work</h1>
+      <div class="grid">
+        <!-- Grid items will live here -->
+        <div class="grid__item">
+          <h2>Meet App</h2>
+          <img src="img/meetPic.JPG" class="project-img" alt="Meet App Screenshot">
+          <p>
+            This is Meet, a calendar based app designed to organize dates and details of events occurring by city! 
+            This uses the google calendar API and data created by Career Foundry.
+          </p>
+          <a href="https://ffernandez524.github.io/meet/">See project on GitHub</a>
         </div>
+        <div class="grid__item">
+          <h2>Pokedex App</h2>
+          <img src="img/pokedexPic.JPG" class="project-img" alt="Meet App Screenshot">
+          <span>This app uses the pokemon API hosted at: </span>
+          <a href="https://pokeapi.co/">https://pokeapi.co/</a>
+          <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
+          <a href="https://github.com/ffernandez524/pokedex-app">See project on GitHub</a>
+          <a href="https://ffernandez524.github.io/pokedex-app/">Check out a live version!</a>            
+        </div>
+        <div class="grid__item">
+          <h2>Chat App</h2>
+          <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
+          <a href="https://github.com/ffernandez524/chat-app">See project on GitHub</a>
+        </div>
+        <div class="grid__item">
+          <h2>MyFlix Api</h2>
+          <p>This project involved creating an API to dispense information from a database of movies to the MyFlix clients. Details are on my github page!</p>
+          <a href="https://github.com/ffernandez524/movie_api">See project on GitHub</a>          
+          <a href="https://cinenotesmovieapp.herokuapp.com/">Api link!</a>
+        </div>=
+        <div class="grid__item">
+          <h2>MyFlix React Client</h2>
+          <p>This app was created based on the MyFlix Client achievement with CareerFoundry! This app is designed to be a an exploration tool for movie lovers to read about and save their favorite movies!</p>
+          <a href="https://github.com/ffernandez524/myFlix-client">See project on GitHub</a>
+          <a href="https://cinenotes.netlify.app/login">Check out a live version!</a>   
+        </div>
+        <div class="grid__item">
+          <h2>MyFlix Angular Client</h2>
+          <p>A version of the MyFlix app created using Angular rather than React.</p>
+          <a href="https://github.com/ffernandez524/myFlix-Angular-client">See project on GitHub</a>
+          <a href="https://ffernandez524.github.io/myFlix-Angular-client/welcome">Check out a live version!</a>   
+        </div>            
+      </div>
     </section>
     <footer class="page-footer">
       <p>Find me on</p>
