work page update

--- a/contact.html
+++ b/contact.html
@@ -34,33 +34,11 @@
       <h1>Contact</h1>
       <div>
         Fernando Fernandez<br>
-        555 Somewhere Ave<br>
-        Atlanta, Georgia 40201<br>
+        Atlanta, Georgia<br>
         USA<br>
-        <a href="tel:+555-555-5555">Tel: 555-555-5555</a><br>
         Skype: <a href="skype:flareniel">Flareniel</a><br>
         Email: <a href="mailto:flareniel@gmail.com">flareniel(at)gmail(dot)com</a><br><br>
         <a href="mailto:flareniel@gmail.com">Contact Me</a><br>
-        <p>Leave me a message by filling out the form below! Fields marked with a * are required.</p>
-        <form action="#" method="post" id="contact-form">
-          <label class="standard-label" for="first-name">First Name:</label><br>
-          <input type="text" id="first-name" name="user-first-name"><br>
-
-          <label class="standard-label" for="last-name">Last Name:</label><br>
-          <input type="text" id="last-name" name="user-last-name"><br>
-
-          <label class="standard-label" for="email">*Email:</label><br>
-          <input type="email" id="email" name="user-email" required><br>
-
-          <label class="standard-label" for="tel">Telephone: (Format: 555-555-5555) </label><br>
-          <input type="tel" id="tel" name="user-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}"><br>
-
-          <label class="standard-label" for="message">*Message: (240 characters max)</label><br>
-          <textarea id="message" maxlength="240" required></textarea><br><br>
-
-          <input type="submit" value="Submit">
-          
-        </form>
       </div>
     </main>
     <footer class="page-footer">
