--- a/work.html
+++ b/work.html
@@ -41,20 +41,42 @@
             This is Meet, a calendar based app designed to organize dates and details of events occurring by city! 
             This uses the google calendar API and data created by Career Foundry.
           </p>
+          <h3>Dependencies</h3>
+          <ul>
+            <li>React</li>
+            <li>NodeJS</li>
+            <li>Bootstrap</li>
+            <li>Jest Cucumber</li>
+            <li>Puppeteer</li>
+          </ul>
           <a href="https://ffernandez524.github.io/meet/">See project on GitHub</a>
         </div>
         <div class="grid__item">
           <h2>Pokedex App</h2>
-          <img src="img/pokedexPic.JPG" class="project-img" alt="Meet App Screenshot">
+          <img src="img/pokedexPic.JPG" class="project-img" alt="Pokedex Screenshot">
           <span>This app uses the pokemon API hosted at: </span>
           <a href="https://pokeapi.co/">https://pokeapi.co/</a>
           <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
+          <h3>Dependencies</h3>
+          <ul>
+            <li>Javascript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
           <a href="https://github.com/ffernandez524/pokedex-app">See project on GitHub</a>
           <a href="https://ffernandez524.github.io/pokedex-app/">Check out a live version!</a>            
         </div>
         <div class="grid__item">
           <h2>Chat App</h2>
-          <p>Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.</p>
+          <img src="img/chatPic.JPG" class="project-img" alt="Chat App Screenshot">
+          <p>This app is designed to be a an basic messaging app that showcases sending and storing data with the help of Google Firebase. Please see my github page for instructions!</p>
+          <h3>Dependencies</h3>
+          <ul>
+            <li>React Native, Router</li>
+            <li>NodeJS</li>
+            <li>Google Firebase, Firestore</li>
+            <li>Expo, Expo-Go, Expo-Location, Expo Image-Picker</li>
+          </ul>
           <a href="https://github.com/ffernandez524/chat-app">See project on GitHub</a>
         </div>
         <div class="grid__item">
@@ -65,12 +87,14 @@
         </div>=
         <div class="grid__item">
           <h2>MyFlix React Client</h2>
+          <img src="img/myFlixReactPic.JPG" class="project-img" alt="MyFlix React Screenshot">
           <p>This app was created based on the MyFlix Client achievement with CareerFoundry! This app is designed to be a an exploration tool for movie lovers to read about and save their favorite movies!</p>
           <a href="https://github.com/ffernandez524/myFlix-client">See project on GitHub</a>
           <a href="https://cinenotes.netlify.app/login">Check out a live version!</a>   
         </div>
         <div class="grid__item">
           <h2>MyFlix Angular Client</h2>
+          <img src="img/myflixAngularPic.JPG" class="project-img" alt="MyFlix Angular Screenshot">
           <p>A version of the MyFlix app created using Angular rather than React.</p>
           <a href="https://github.com/ffernandez524/myFlix-Angular-client">See project on GitHub</a>
           <a href="https://ffernandez524.github.io/myFlix-Angular-client/welcome">Check out a live version!</a>   
