--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <h1>Contact</h1>
-      <div>
+    <main>      
+      <div class="contact">
+        <h1>Contact</h1>
         Fernando Fernandez<br>
         Atlanta, Georgia<br>
         USA<br>
