--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
           <p>This project involved creating an API to dispense information from a database of movies to the MyFlix clients. Details are on my github page!</p>
           <a href="https://github.com/ffernandez524/movie_api">See project on GitHub</a>          
           <a href="https://cinenotesmovieapp.herokuapp.com/">Api link!</a>
-        </div>=
+        </div>
         <div class="grid__item">
           <h2>MyFlix React Client</h2>
           <img src="img/myFlixReactPic.JPG" class="project-img" alt="MyFlix React Screenshot">
