--- a/work.html
+++ b/work.html
@@ -54,9 +54,8 @@
         <div class="grid__item">
           <h2>Pokedex App</h2>
           <img src="img/pokedexPic.JPG" class="project-img" alt="Pokedex Screenshot">
-          <span>This app uses the pokemon API hosted at: </span>
+          <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details! This app uses the pokemon API hosted at: </p>
           <a href="https://pokeapi.co/">https://pokeapi.co/</a>
-          <p>View data on over 1000 pokemon! The website loads a series of buttons that contain the pokemon and it's number. Clicking on a button shows more details!</p>
           <h3>Dependencies</h3>
           <ul>
             <li>Javascript</li>
