--- a/about.html
+++ b/about.html
@@ -26689,6 +26689,9 @@
         <a href="https://www.linkedin.com/in/ffernand524">
           <img src="./img/linkedIn_icon.svg" alt="linked in">
         </a>
+        <a href="https://medium.com/@flareniel">
+         <img src="./img/medium_icon.svg" alt="medium">
+        </a>
       </div>      
     </footer>
     <script src="js/tota11y.min.js"></script>
