--- a/about.html
+++ b/about.html
@@ -26665,6 +26665,26 @@
             <td>Beginner</td>
           </tr>
           <tr>
+            <td>Javascript</td>
+            <td>6 months</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>React</td>
+            <td>4 months</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>React-Native</td>
+            <td>2 months</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>Angular</td>
+            <td>1 month</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
             <td>C++</td>
             <td>1</td>
             <td>Beginner</td>
